# nextfull

./: .gitignore  01_make_sentences.py  02_train_sentence_encoder.py  03_embed_sentences.py  04_fit_rvq.py  04b_encode_codes.py  05_build_datasets.py  06_train_planner.py  07_train_renderer_reward.py  08_generate.py  09_chat.py  10_server.py  README.md  pyproject.toml  utils.py
tools/: __init__.py  data.py  encoder.py  planner.py  renderer.py  reward.py  rvq.py
