[project]
name = "sentcodelm"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "datasets",
  "torch",
  "numpy<2",
  "tqdm",
  "regex",
  "pyyaml",
  "pyarrow",
  "zstandard",
  "xxhash",
  "faiss-gpu",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]
py-modules = ["utils"]
